; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_rchap_new.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_rchap_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rchap = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"calloc\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.rchap* @rchap_new(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.rchap*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.rchap* @calloc(i32 1, i32 4)
  store %struct.rchap* %4, %struct.rchap** %3, align 8
  %5 = load %struct.rchap*, %struct.rchap** %3, align 8
  %6 = icmp eq %struct.rchap* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @log_err(i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @checked_strdup(i8* %10)
  %12 = load %struct.rchap*, %struct.rchap** %3, align 8
  %13 = getelementptr inbounds %struct.rchap, %struct.rchap* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.rchap*, %struct.rchap** %3, align 8
  ret %struct.rchap* %14
}

declare dso_local %struct.rchap* @calloc(i32, i32) #1

declare dso_local i32 @log_err(i32, i8*) #1

declare dso_local i32 @checked_strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
